force-app/main/default/objects/Event__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <description>This is a date time field.</description>
    <inlineHelpText>Enter the end date and time of the event</inlineHelpText>
    <label>End</label>
    <type>DateTime</type>
</CustomField>