force-app/main/default/objects/Event__c/fields/Event_Organizer__c.field-meta.xml
<CustomField>
    <fullName>Event_Organizer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup field of Event Organizer.</description>
    <inlineHelpText>Select the event organizer.</inlineHelpText>
    <label>Event Organizer</label>
    <referenceTo>Event_Organiser__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>