force-app/main/default/objects/Event__c/fields/Live__c.field-meta.xml
<CustomField>
    <fullName>Live__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This a checkbox if the event is live.</description>
    <inlineHelpText>Is the event live?</inlineHelpText>
    <label>Live?</label>
    <type>Checkbox</type>
</CustomField>