force-app/main/default/objects/Event__c/fields/Location_Verified__c.field-meta.xml
<CustomField>
    <fullName>Location_Verified__c</fullName>
    <description>This a formula field in which we used a relation to set a value.</description>
    <formula>Location_Address_Book__r.Verified__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field obtains value from Location object.</inlineHelpText>
    <label>Location Verified</label>
    <type>Checkbox</type>
</CustomField>