force-app/main/default/objects/Event__c/fields/Max_Seats__c.field-meta.xml
<CustomField>
    <fullName>Max_Seats__c</fullName>
    <description>This is a number field for the maximum number of seats.</description>
    <inlineHelpText>Enter the maximum number of seats in the event.</inlineHelpText>
    <label>Max Seats</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>