force-app/main/default/objects/Event__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>This field contains name.</description>
    <inlineHelpText>Enter the name of event.</inlineHelpText>
    <label>Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>