force-app/main/default/objects/Event__c/fields/Number_of_Attending__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Attending__c</fullName>
    <description>This is a rollup field of attendee object to count the number of attending people.</description>
    <inlineHelpText>How many people are attending the event.</inlineHelpText>
    <label>Number of Attending</label>
    <summaryForeignKey>Event_Attendee__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>