force-app/main/default/objects/Event__c/fields/Recurring__c.field-meta.xml
<CustomField>
    <fullName>Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a checkbox if the event is recurring or not.</description>
    <inlineHelpText>Is te event recurring?</inlineHelpText>
    <label>Recurring?</label>
    <type>Checkbox</type>
</CustomField>