force-app/main/default/objects/Event__c/fields/Remaining_Seats__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Seats__c</fullName>
    <description>This is a formula field and this contains the seat left for an event.</description>
    <formula>Max_Seats__c -  Number_of_Attending__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>It shows how many sears are remaining in an event.</inlineHelpText>
    <label>Remaining Seats</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>