force-app/main/default/objects/Event__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <description>This is a date time field for event.</description>
    <inlineHelpText>Enter the start date and time of the event.</inlineHelpText>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>