force-app/main/default/objects/Event__c/validationRules/End_DateTime_Field_plus_1.validationRule-meta.xml
<ValidationRule>
    <fullName>End_DateTime_Field_plus_1</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISBLANK( End__c ) ),  End__c &lt;=  Start__c +(1) )</errorConditionFormula>
    <errorDisplayField>End__c</errorDisplayField>
    <errorMessage>End Date/Time must be at-least 1 day ahead of Start Date/Time</errorMessage>
</ValidationRule>