force-app/main/default/objects/Event__c/validationRules/EventType_InPerson_Location.validationRule-meta.xml
<ValidationRule>
    <fullName>EventType_InPerson_Location</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Event_Type__c , &quot;In-Person&quot;), ISBLANK( Location_Address_Book__c ) )</errorConditionFormula>
    <errorDisplayField>Location_Address_Book__c</errorDisplayField>
    <errorMessage>User has to Select Location on Event Record</errorMessage>
</ValidationRule>