force-app/main/default/objects/Event__c/validationRules/EventType_Virtual_Location.validationRule-meta.xml
<ValidationRule>
    <fullName>EventType_Virtual_Location</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Event_Type__c , &quot;Virtual&quot;),  NOT( ISBLANK( Location_Address_Book__c ) ) )</errorConditionFormula>
    <errorDisplayField>Location_Address_Book__c</errorDisplayField>
    <errorMessage>User cannot Select Location on Event Record</errorMessage>
</ValidationRule>