force-app/main/default/objects/Event__c/validationRules/Recurring_False_Frequency.validationRule-meta.xml
<ValidationRule>
    <fullName>Recurring_False_Frequency</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( Recurring__c ), NOT( ISPICKVAL( Frequency__c , &quot;&quot;) ) )</errorConditionFormula>
    <errorDisplayField>Frequency__c</errorDisplayField>
    <errorMessage>User cannot select Frequency field</errorMessage>
</ValidationRule>