force-app/main/default/objects/Event__c/validationRules/Recurring_True_Frequency.validationRule-meta.xml
<ValidationRule>
    <fullName>Recurring_True_Frequency</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Recurring__c , ISPICKVAL( Frequency__c , &quot;&quot;) )</errorConditionFormula>
    <errorDisplayField>Frequency__c</errorDisplayField>
    <errorMessage>user must need to fill Frequency field</errorMessage>
</ValidationRule>